화면구성 변경 및 대화상자 설정 검토

--- a/ExpressApp2/ExpressApp2/public/locales/en.json
+++ b/ExpressApp2/ExpressApp2/public/locales/en.json
@@ -92,6 +92,7 @@
 	"Search_Dialogue": "Search Dialogue",
 	"============= Learning > DIALOG =============": "",
 	"Enter_Connection_utterance": "Enter Connection utterance",
+	"Enter_Connection_intent": "Enter Connection intent",
 	"explanation": "EXPLANATION",
 	"CONNECTION_UTTERANCE": "CONNECTION INTENT",
 	"PREVIEW_DLG": "PREVIEW DIALOG",
