--- a/ExpressApp2/ExpressApp2/public/locales/ko.json
+++ b/ExpressApp2/ExpressApp2/public/locales/ko.json
@@ -91,6 +91,7 @@
 	"Create_new_Entity_Set": "새로운 엔티티 세트 생성",
 	"============= Learning > DIALOG =============": "",
 	"Enter_Connection_utterance": "연결 발언을 입력하세요.",
+	"Enter_Connection_intent": "연결 의도를 입력하세요.",
 	"explanation": "설명",
 	"CONNECTION_UTTERANCE": "연결의도",
 	"PREVIEW_DLG": "대화상자 미리보기",
